--- a/molecule/gnome/molecule.yml
+++ b/molecule/gnome/molecule.yml
@@ -18,7 +18,7 @@ platforms:
       - "disk_driver :cache => 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
     instance_raw_config_args:
-      - 'vm.provision :shell, inline: "pacman -Syu --noconfirm git net-tools python3 sudo unzip which"'
+      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
   - name: gentoo
     box: generic/gentoo
     cpus: 4
@@ -40,7 +40,7 @@ platforms:
     memory: 2048
     provider_raw_config_args: *raw_config
   - name: debian12
-    box: debian/testing64
+    box: debian/bookworm64
     memory: 2048
     provider_raw_config_args: *raw_config
   - name: ubuntu1804
@@ -55,8 +55,8 @@ platforms:
     box: generic/ubuntu2204
     memory: 2048
     provider_raw_config_args: *raw_config
-  - name: ubuntu2210
-    box: generic/ubuntu2210
+  - name: ubuntu2304
+    box: generic/ubuntu2304
     memory: 2048
     provider_raw_config_args: *raw_config
 
