--- a/defaults/main/users.yml
+++ b/defaults/main/users.yml
@@ -1,4 +1,5 @@
 ---
+system_l10n: []
 system_users_admin_group: "{{ 'adm' if ansible_os_family == 'Debian' else 'wheel' }}"
 system_users_groups: []
 system_users: []
