--- a/handlers/hosts.yml
+++ b/handlers/hosts.yml
@@ -1,27 +1,31 @@
 ---
-- name: OpenRC - Auto merge /etc/conf.d/hostname
+- name: Auto merge /etc/conf.d/hostname
   listen:
     - restart hostname
     - restart logind
+  when: ansible_service_mgr == "openrc"
   become: true
   ansible.builtin.command:
     cmd: etc-update --automode -5 /etc/conf.d/hostname
   register: result
   changed_when: "'/etc/conf.d/hostname' in result.stdout"
 
-- name: OpenRC - Restart services impacted by changed hostname
+- name: Restart hostname service
   listen:
     - restart hostname
     - restart logind
+  when: ansible_service_mgr == "openrc"
   become: true
   ansible.builtin.service:
     name: hostname
     state: restarted
 
-- name: OpenRC - Restart the Display Manager
+- name: Restart systemd-logind service
   listen:
-    - restart display-manager
+    - restart hostname
+    - restart logind
+  when: ansible_service_mgr == "systemd"
   become: true
-  ansible.builtin.service:
-    name: display-manager
+  ansible.builtin.systemd:
+    name: systemd-logind.service
     state: restarted
