--- a/molecule/servers/molecule.yml
+++ b/molecule/servers/molecule.yml
@@ -5,13 +5,10 @@ driver:
   name: vagrant
   provider:
     name: libvirt
+  provision: true
 platforms:
-  # Debian like
-  - name: debian10
-    box: debian/buster64
-    groups:
-      - debian
-      - debian_like
+  - name: archlinux
+    box: archlinux/archlinux
     interfaces: &interfaces
       - auto_config: false
         network_name: private_network
@@ -23,13 +20,42 @@ platforms:
       - "video_type = 'virtio'"
       - "disk_driver :cache => 'writeback'"
       - "storage :file, bus: 'virtio', cache: 'writeback'"
+    instance_raw_config_args:
+      - 'vm.disk :disk, size: "1GB", name: "vdb"'
+      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
+  - name: gentoo
+    box: generic/gentoo
+    cpus: 4
+    memory: 8192
+    interfaces: *interfaces
+    provider_raw_config_args:
+      - "cpu_mode = 'host-passthrough'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
     instance_raw_config_args: &instance
       - 'vm.disk :disk, size: "1GB", name: "vdb"'
+
+  # Debian like
+  - name: debian10
+    box: debian/buster64
+    groups:
+      - debian
+      - debian_like
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: *instance
   - name: debian11
     box: debian/bullseye64
     groups:
       - debian
       - debian_like
+    interfaces: *interfaces
+    provider_raw_config_args: *provider
+    instance_raw_config_args: *instance
+  - name: debian12
+    box: debian/bookworm64
     interfaces: *interfaces
     provider_raw_config_args: *provider
     instance_raw_config_args: *instance
@@ -56,8 +82,8 @@ platforms:
     interfaces: *interfaces
     provider_raw_config_args: *provider
     instance_raw_config_args: *instance
-  - name: ubuntu2210
-    box: generic/ubuntu2210
+  - name: ubuntu2304
+    box: generic/ubuntu2304
     groups:
       - debian_like
     memory: 2048
