--- a/tasks/packages/prewash/packages.yml
+++ b/tasks/packages/prewash/packages.yml
@@ -1,9 +1,8 @@
 ---
-- name: Packages - Prewash - Packages - Facts
+- name: Packages - Prewash - Packages - System packages facts
   ansible.builtin.package_facts:
 
-- name: Packages - Prewash - Packages - Remove
-  become: true
+- name: Packages - Prewash - Packages - Variables
   vars:
     packages_keys: |
       {{
@@ -18,12 +17,18 @@
         (family_packages | default({})) |
         combine(distro_packages | default({}))
       }}
-  ansible.builtin.package:
-    name: |
+  ansible.builtin.set_fact:
+    to_remove: |
       {{
         (
           (packages_keys | intersect(packages.keys()) | map('extract', packages))
         + (packages_keys | difference(packages.keys()))
         ) | flatten | unique | intersect(ansible_facts.packages.keys())
       }}
+
+- name: Packages - Prewash - Packages - Remove
+  when: to_remove | length > 0
+  become: true
+  ansible.builtin.package:
+    name: "{{ to_remove }}"
     state: absent
