--- a/tasks/packages/prewash/services.yml
+++ b/tasks/packages/prewash/services.yml
@@ -12,21 +12,26 @@
         state: stopped
         enabled: false
       vars:
-        services: |
+        current_services: |
           {{
             ansible_facts.services |
             dict2items |
             json_query("[?value.status!='not-found'].key")
           }}
+        services_keys: |
+          {{
+            supported_time_backends |
+            dict2items |
+            rejectattr('key', '==', time_backend_name) |
+            map(attribute='value') |
+            map(attribute='services') |
+            flatten
+          }}
       loop: |
         {{
-          supported_time_backends |
-          dict2items |
-          rejectattr('key', '==', time_backend_name) |
-          map(attribute='value') |
-          map(attribute='services') |
-          flatten |
-          intersect(services)
+          ( (services_keys | intersect(system_services_dict.keys()) | map('extract', system_services_dict))
+          + (services_keys | difference(system_services_dict.keys()))
+          ) | map('intersect', current_services) | flatten
         }}
       loop_control:
         loop_var: service
