--- a/tasks/packages/requirements.yml
+++ b/tasks/packages/requirements.yml
@@ -10,3 +10,6 @@
       skip: true
   loop_control:
     loop_var: req_task
+
+- name: Packages - Requirements - Flush handlers
+  ansible.builtin.meta: flush_handlers
