--- a/tasks/packages/requirements/pacman.yml
+++ b/tasks/packages/requirements/pacman.yml
@@ -1,8 +1,41 @@
 ---
-- name: Packages - Requirements - Pacman
-  ansible.builtin.include_tasks: "{{ role_path }}/tasks/packages/requirements/pacman/{{ pacman_task }}.yml"
-  loop:
-    - keyring
-    - yay
-  loop_control:
-    loop_var: pacman_task
+- name: Packages - Requirements - Pacman - Yay
+  when: system_archlinux_user_repository
+  block:
+    - name: Packages - Requirements - Pacman - Yay - Check for the binary
+      ansible.builtin.stat:
+        path: /usr/bin/yay
+      register: system_bin_yay
+
+    - name: Packages - Requirements - Pacman - Yay - Install
+      when: not system_bin_yay.stat.exists
+      block:
+        - name: Packages - Requirements - Pacman - Yay - Install build dependencies
+          become: true
+          community.general.pacman:
+            name:
+              - base-devel
+              - fakeroot
+              - git
+              - make
+
+        - name: Packages - Requirements - Pacman - Yay - Clone from github
+          ansible.builtin.git:
+            repo: https://aur.archlinux.org/yay.git
+            dest: /tmp/yay
+            version: "{{ system_yay_version | default(omit) }}"
+
+        - name: Packages - Requirements - Pacman - Yay - Build
+          ansible.builtin.command:
+            cmd: makepkg --noconfirm -si
+            chdir: /tmp/yay
+            creates: /usr/bin/yay
+
+    - name: Packages - Requirements - Pacman - Yay - Ansible module
+      become: true
+      run_once: true
+      delegate_to: localhost
+      ansible.builtin.get_url:
+        url: https://raw.githubusercontent.com/mnussbaum/ansible-yay/master/yay
+        dest: /usr/share/ansible/yay
+        mode: "0755"
