--- a/tasks/packages/requirements.yml
+++ b/tasks/packages/requirements.yml
@@ -12,6 +12,7 @@
     loop_var: req_task
 
 - name: Packages - Requirements - Modules load directory
+  become: true
   ansible.builtin.file:
     path: /etc/modules-load.d
     state: directory
