--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -72,6 +72,17 @@
         loop_var: user
       no_log: true
 
+    - name: Users - Home directories permissions
+      ansible.builtin.file:
+        path: "{{ user.home | default('/home/' + user.name) }}"
+        state: directory
+        owner: "{{ user.name }}"
+        group: "{{ user.group | default(omit) }}"
+        mode: "0755"
+      loop: "{{ system_users }}"
+      loop_control:
+        loop_var: user
+
     - name: Users - Keys
       ansible.posix.authorized_key:
         comment: "{{ key.comment | default(omit) }}"
