--- a/molecule/chrony/molecule.yml
+++ b/molecule/chrony/molecule.yml
@@ -1,82 +1,1 @@
----
-dependency:
-  name: galaxy
-driver:
-  name: vagrant
-  provider:
-    name: libvirt
-  provision: true
-platforms:
-  - name: archlinux
-    box: archlinux/archlinux
-    provider_raw_config_args: &raw_config
-      - "cpu_mode = 'host-passthrough'"
-      - "disk_bus = 'virtio'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
-    instance_raw_config_args:
-      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
-  - name: gentoo
-    box: generic/gentoo
-    cpus: 4
-    memory: 8192
-    provider_raw_config_args:
-      - "cpu_mode = 'host-passthrough'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
-
-  # Debian like
-  - name: debian10
-    box: debian/buster64
-    provider_raw_config_args: *raw_config
-  - name: debian11
-    box: debian/bullseye64
-    provider_raw_config_args: *raw_config
-  - name: debian12
-    box: debian/bookworm64
-    provider_raw_config_args: *raw_config
-  - name: ubuntu1804
-    box: generic/ubuntu1804
-    provider_raw_config_args: *raw_config
-  - name: ubuntu2004
-    box: generic/ubuntu2004
-    memory: 2048
-    provider_raw_config_args: *raw_config
-  - name: ubuntu2204
-    box: generic/ubuntu2204
-    memory: 2048
-    provider_raw_config_args: *raw_config
-  - name: ubuntu2304
-    box: generic/ubuntu2304
-    memory: 2048
-    provider_raw_config_args: *raw_config
-
-  # RedHat like
-  - name: centos7
-    box: centos/7
-    provider_raw_config_args: *raw_config
-  - name: centos8s
-    box: generic/centos8s
-    memory: 2048
-    provider_raw_config_args: *raw_config
-  - name: centos9s
-    box: generic/centos9s
-    memory: 2048
-    provider_raw_config_args: *raw_config
-  - name: alma8
-    box: almalinux/8
-    memory: 2048
-    provider_raw_config_args: *raw_config
-  - name: alma9
-    box: almalinux/9
-    memory: 2048
-    provider_raw_config_args: *raw_config
-lint: ansible-lint
-provisioner:
-  name: ansible
-verifier:
-  name: ansible
+../default/molecule.yml
